--- a/uiux_report.html
+++ b/uiux_report.html
@@ -164,7 +164,14 @@
                     <div class="page_list_item_page_choice">
                         <div><a href="#p11-1">聯絡資訊、專案成員評價</a></div>
                         <div>
-                            <a href="#p11-2">更多專案執行內容</a>
+                            <a href="#p11-2">更多執行專案</a>
+                        </div>
+                        <div style="margin-top:8px;">
+                            <ul style="font-size:16px;padding-left:25px;list-style:disc;">
+                                <li style="margin-bottom:5px;">共享交通-市場開發UXR研究</li>
+                                <li style="margin-bottom:5px;">泰安產物-官網維運、行銷網頁、後台製作</li>
+                                <li style="margin-bottom:5px;">元大槓桿交易-官網視覺改版</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
