--- a/oloo_works_1-r.html
+++ b/oloo_works_1-r.html
@@ -74,7 +74,7 @@
 <body class="body_page oloo_works_1_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold" style="margin-bottom:10px;">UXR市場研究&nbsp;制定議題</div>
+            <div class="h4 font_bold" style="margin-bottom:10px;">市場開發UXR研究&nbsp;制定議題</div>
         </div>
 
         <div class="pup_window_content_tab_container">
