--- a/oloo_works_4.html
+++ b/oloo_works_4.html
@@ -74,7 +74,7 @@
 <body class="body_page oloo_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">UXR市場研究案&nbsp;專案個人亮點</div>
+            <div class="h4 font_bold">市場開發UXR研究&nbsp;專案個人亮點</div>
             <a href="uiux_index.html#p13_title-3">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
