--- a/uiux_report.html
+++ b/uiux_report.html
@@ -241,14 +241,19 @@
                     </picture>
                     <div class="btn_container">
                         <a href="ps_works_r.html" target="_blank" class="hvr-top-l">
-                            <div class="line_btn ps_btn appear-animation" data-appear-animation="fadeInUp">點擊瀏覽&nbsp;Photoshop作品</div>
+                            <div class="line_btn ps_btn appear-animation" data-appear-animation="fadeInUp">瀏覽&nbsp;Photoshop作品</div>
                         </a>
                         <a href="illustrator_works-r.html" target="_blank" class="hvr-top-l">
-                            <div class="line_btn ill_btn appear-animation" data-appear-animation="fadeInUp">點擊瀏覽&nbsp;Illustrator作品</div>
+                            <div class="line_btn ill_btn appear-animation" data-appear-animation="fadeInUp">瀏覽&nbsp;Illustrator作品</div>
+                        </a>
+                    </div>
+                    <div class="btn_container" style="bottom:-61px;">
+                        <a href="ui_animate.html" target="_blank" class="hvr-top-l">
+                            <div class="line_btn ill_btn appear-animation" data-appear-animation="fadeInUp">瀏覽&nbsp;介面互動效果製作</div>
                         </a>
                     </div>
                 </div>
-                <div class="page_content_img" style="text-align:center;margin-top:80px;">
+                <div class="page_content_img" style="text-align:center;margin-top:150px;">
                     <picture>
                         <img src="images_report/page_content_img-2-2.png" alt="職涯歷程內容">
                     </picture>
@@ -866,7 +871,7 @@
         <div>
             <div class="title">您目前瀏覽視窗，寬度小於1280px</div>
             <div class="text">
-                瀏覽作品集內容<br/>建議為<br/>「筆電或桌機螢幕」1280px以上解析度<br/><br/>
+                瀏覽作品集內容<br />建議為<br />「筆電或桌機螢幕」1280px以上解析度<br /><br />
                 <div class="note">
                     若目前無法適配，可點擊下方按鈕
                     <a href="https://joehouse1015.github.io/joe_works/uiux_index.html" target="_blank">
