--- a/uiux_report.html
+++ b/uiux_report.html
@@ -532,8 +532,15 @@
                         <div class="line_btn appear-animation" data-appear-animation="fadeInUp" style="padding:0px 30px;">點擊瀏覽&nbsp;Figma製作原型</div>
                     </div>
                     <div class="btn_container">
+                        <a href="ui_animate.html" target="_blank" class="hvr-top-l">
+                            <div class="fill_btn_large appear-animation" data-appear-animation="fadeInUp" style="margin:0px 15px;">
+                                <div>
+                                    <div>點擊瀏覽&nbsp;介面互動展示</div>
+                                </div>
+                            </div>
+                        </a>
                         <a href="website/sinopac_web/index.html" target="_blank" class="hvr-top-l">
-                            <div class="fill_btn_large appear-animation" data-appear-animation="fadeInUp">
+                            <div class="fill_btn_large appear-animation" data-appear-animation="fadeInUp" style="margin:0px 15px;">
                                 <div>
                                     <div>點擊瀏覽&nbsp;網站RWD首頁原型</div>
                                     <div class="btn_note">Html、Scss、Jquery</div>
