--- a/uiux_index.html
+++ b/uiux_index.html
@@ -240,7 +240,7 @@
 
     </script>
     <!-- 回饋瀏覽感受end -->
-    
+
     <div class="page_choice_btn_note" style="display:none;">
         <div>點擊&nbsp;<span class="page_choice_btn_icon">≡</span>&nbsp;可以<br>開啟頁面選單</div>
         <div class="page_choice_btn_note_btn" role="button"><span>了解，</span>關閉提示</div>
@@ -734,11 +734,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div>
+                            <div class="item_check_padding">
                                 <div class="info_skill_item_title h5 font_bold">Jquery</div>
                                 <div class="info_skill_item_text">
                                     製作網站原型(Prototype)介面互動效果，如：選單收合、彈跳視窗、Tab切換內容...等。
                                 </div>
+                                <a href="ui_animate-r2.html">
+                                    <div class="info_skill_item_check font_bold appear-animation illustrator_works_btn" data-appear-animation="fadeInUp">觀看介面互動效果</div>
+                                </a>
                                 <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
                                 <div class="info_skill_item_pic">
                                     <img src="images/info_skill_pic_6-2.png" alt="Jquery logo">
@@ -1109,12 +1112,16 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="website/sinopac_web/index.html" target="_blank" id="sino_prototype_html">實行性原型(前端切版)-首頁範例</a></span>
+                                <span><a href="website/sinopac_web/index.html" target="_blank" id="sino_prototype_html">實行性原型(前端切版)-RWD首頁範例</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
                                     <span><a href="sino_works_5.html">前端切版說明</a></span>
+                                </div>
+                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                    <span><a href="ui_animate-r.html">介面互動效果展示</a></span>
                                 </div>
                                 <div class="work_info_note appear-animation" data-appear-animation="fadeInUp" style="font-size:16px;color:#232323;">
                                     <div><span>*</span>設計稿與前端切版配合的實際應用。</div>
