--- a/uiux_index.html
+++ b/uiux_index.html
@@ -863,7 +863,7 @@
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
                                     <li style="margin-bottom:3px;">規劃影音教材的活動網站，以考前猜題吸引學生註冊，收集註冊資料和GA、GTM數據；業務反饋對產品銷售有明顯幫助。</li>
-                                    <li>規劃人資、家教部管理後台，皆有正面評價。</li>
+                                    <li>協助規劃人資、家教部管理後台，皆有正面評價。</li>
                                 </ul>
                                 <a href="study_1.html">
                                     <div class="info_skill_item_check font_bold appear-animation ps_works_btn fadeInUp appear-animation-visible" style="text-align:left;margin-top:10px;position:relative;top:0px;left:0px;">
