--- a/gapp_works_1-r.html
+++ b/gapp_works_1-r.html
@@ -312,7 +312,7 @@
                                 </div>
                                 <div class="pup_content_pic">
                                     <picture>
-                                        <img src="images/gapp_pic_3.png" style="max-width:100%;">
+                                        <img src="images_anue/gapp_pic_3.png" style="max-width:100%;">
                                     </picture>
                                 </div>
                             </div>
@@ -359,9 +359,9 @@
                                 </div>
                                 <div class="pup_content_pic" style="margin-bottom:40px;">
                                     <picture>
-                                        <source media="(max-width:540px)" srcset="images/gapp_pic_5-1-540.png" />
-                                        <source media="(max-width:1024px)" srcset="images/gapp_pic_5-1-1024.png" />
-                                        <img src="images/gapp_pic_5-1.png" style="max-width:100%;">
+                                        <source media="(max-width:540px)" srcset="images_anue/gapp_pic_5-1-540.png" />
+                                        <source media="(max-width:1024px)" srcset="images_anue/gapp_pic_5-1-1024.png" />
+                                        <img src="images_anue/gapp_pic_5-1.png" style="max-width:100%;">
                                     </picture>
                                 </div>
                                 <div class="pup_text large_text" style="margin-top:20px;">
