--- a/uiux_report.html
+++ b/uiux_report.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="page_list_item_page_choice">
                         <div><a href="#p5">學習教材影音網站</a></div>
-                        <div><a href="#p6">金融商品投資APP</a></div>
+                        <div><a href="#p6">鉅亨買基金APP</a></div>
                     </div>
                 </div>
                 <div class="page_list_item">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="page_content_img">
                     <picture>
-                        <img src="images_report/page_content_img-1.png" alt="目錄">
+                        <img src="images_anue/page_content_img-1.png" alt="目錄">
                     </picture>
                 </div>
             </div>
@@ -316,30 +316,30 @@
             </div>
             <div class="page_content">
                 <div class="page_content_title">
-                    <div class="page_content_title_name"><img src="images_report/page_content_title-4.png" alt="金融商品投資APP-找出資料脈絡，靈活提出產品策略"></div>
+                    <div class="page_content_title_name"><img src="images_anue/page_content_title-4.png" alt="鉅亨買基金APP-找出資料脈絡，靈活提出產品策略"></div>
                     <div class="page_content_title_line"></div>
                 </div>
                 <div class="page_content_img">
                     <picture>
-                        <img src="images_report/page_content_img-4-1.png" alt="金融商品投資APP-前言">
+                        <img src="images_report/page_content_img-4-1.png" alt="鉅亨買基金APP-前言">
                     </picture>
                 </div>
                 <div class="page_dashed_line"></div>
                 <div class="page_content_img" style="text-align:center;">
                     <picture>
-                        <img src="images_report/page_content_img-4-2.png" alt="金融商品投資APP-產品頁面提案">
+                        <img src="images_anue/page_content_img-4-2.png" alt="鉅亨買基金APP-產品頁面提案">
                     </picture>
                 </div>
                 <div class="page_dashed_line"></div>
                 <div class="page_content_img">
                     <picture>
-                        <img src="images_report/page_content_img-4-3.png" alt="金融商品投資APP-產品思維展現">
+                        <img src="images_anue/page_content_img-4-3.png" alt="鉅亨買基金APP-產品思維展現">
                     </picture>
                 </div>
                 <div class="page_dashed_line"></div>
                 <div class="page_content_img gapp_work-4" style="padding-bottom:75px;">
                     <picture>
-                        <img src="images_report/page_content_img-4-4.png" alt="金融商品投資APP-產品頁面架構">
+                        <img src="images_report/page_content_img-4-4.png" alt="鉅亨買基金APP-產品頁面架構">
                     </picture>
                     <div class="btn_container">
                         <a href="gapp_works_1-r.html" target="_blank" class="hvr-top-l">
@@ -355,10 +355,10 @@
                 <div class="page_dashed_line"></div>
                 <div class="page_content_img gapp_work-5" style="text-align:center;padding-left:0px;padding-bottom:75px;">
                     <picture>
-                        <img src="images_report/page_content_img-4-5.png" alt="金融商品投資APP-介面設計稿">
+                        <img src="images_anue/page_content_img-4-5.png" alt="鉅亨買基金APP-介面設計稿">
                     </picture>
                     <div class="btn_container">
-                        <a href="gapp_works_2-r.html" target="_blank" class="hvr-top-l">
+                        <a href="gapp_works_2-r2.html" target="_blank" class="hvr-top-l">
                             <div class="line_btn_large appear-animation" data-appear-animation="fadeInUp">
                                 <div>
                                     <div>點擊瀏覽&nbsp;更多介面設計稿</div>
@@ -371,7 +371,7 @@
             </div>
             <div class="page_bottom_bar">
                 <span class="page_num">03</span>
-                <span class="page_name">金融商品投資APP</span>
+                <span class="page_name">鉅亨買基金APP</span>
             </div>
         </div>
 
