--- a/gapp_works_2-r2.html
+++ b/gapp_works_2-r2.html
@@ -74,7 +74,7 @@
 <body class="body_page gapp_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold" style="margin-bottom:10px;">投資交易APP&nbsp;介面設計稿</div>
+            <div class="h4 font_bold" style="margin-bottom:10px;">鉅亨買基金APP&nbsp;介面設計稿</div>
         </div>
 
             <div class="pup_window_content_tab_container">
@@ -132,7 +132,7 @@
                             </div>
                             <div class="pup_content_pic_item" style="margin-bottom:30px;">
                                 <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:0px;">
-                                    <img src="images_anue/gapp_pic_8-1.png" style="max-width:100%">
+                                    <img src="images/gapp_pic_8-1.png" style="max-width:100%">
                                 </div>
                             </div>
                             <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
