--- a/uiux_report.html
+++ b/uiux_report.html
@@ -881,7 +881,7 @@
                 瀏覽作品集內容<br />建議為<br />「筆電或桌機螢幕」1280px以上解析度<br /><br />
                 <div class="note">
                     若目前無法適配，可點擊下方按鈕
-                    <a href="https://joehouse1015.github.io/joe_works/uiux_index.html" target="_blank">
+                    <a href="https://joehouse1015.github.io/joe_works/uiux_index-move.html" target="_blank">
                         <div class="line_btn">
                             前往RWD作品集版本
                         </div>
