--- a/uiux_report.html
+++ b/uiux_report.html
@@ -142,7 +142,7 @@
                         <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                     </div>
                     <div class="page_list_item_page_choice">
-                        <div><a href="#p5">學習教材影音網站</a></div>
+                        <div style="display:none;"><a href="#p5">學習教材影音網站</a></div>
                         <div><a href="#p6">鉅亨買基金APP</a></div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
 
         <div class="page_container">
             <div id="p1" class="page_num_infor">
-                第1頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第1頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="page_content">
                 <div class="page_content_title">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="page_content_img">
                     <picture>
-                        <img src="images_anue/page_content_img-1.png" alt="目錄">
+                        <img src="images_report/page_content_img-1.png" alt="目錄">
                     </picture>
                 </div>
             </div>
@@ -216,7 +216,7 @@
 
         <div class="page_title">
             <div class="page_num_infor">
-                第2頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第2頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="work_title_img_container set_middle appear-animation" data-appear-animation="fadeInUp">
                 <picture>
@@ -228,7 +228,7 @@
 
         <div class="page_container">
             <div id="p3" class="page_num_infor">
-                第3頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第3頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="page_content">
                 <div class="page_content_title">
@@ -267,7 +267,7 @@
 
         <div class="page_title">
             <div class="page_num_infor">
-                第4頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第4頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="work_title_img_container set_middle appear-animation" data-appear-animation="fadeInUp">
                 <picture>
@@ -277,9 +277,9 @@
             <div class="page_bottom_bar"></div>
         </div>
 
-        <div class="page_container">
+        <div class="page_container" style="display:none;">
             <div id="p5" class="page_num_infor">
-                第5頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第5頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="page_content">
                 <div class="page_content_title">
@@ -312,7 +312,7 @@
 
         <div class="page_container">
             <div id="p6" class="page_num_infor">
-                第6頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第5頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="page_content">
                 <div class="page_content_title">
@@ -377,7 +377,7 @@
 
         <div class="page_title">
             <div class="page_num_infor">
-                第7頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第6頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="work_title_img_container set_middle appear-animation" data-appear-animation="fadeInUp">
                 <picture>
@@ -389,7 +389,7 @@
 
         <div class="page_container">
             <div id="p8" class="page_num_infor">
-                第8頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第7頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="page_content">
                 <div class="page_content_title">
@@ -594,7 +594,7 @@
         </div>
         <div class="page_container">
             <div id="p9" class="page_num_infor">
-                第9頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第8頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="page_content">
                 <div class="page_content_title">
@@ -695,7 +695,7 @@
 
         <div class="page_title">
             <div class="page_num_infor">
-                第10頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第9頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="work_title_img_container set_middle appear-animation" data-appear-animation="fadeInUp">
                 <picture>
@@ -707,7 +707,7 @@
 
         <div class="page_container">
             <div id="p11-1" class="page_num_infor">
-                第11頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第10頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="page_content" style="padding-bottom:80px;">
                 <div class="page_content_title">
@@ -814,7 +814,7 @@
         </div>
         <div class="page_title">
             <div class="page_num_infor">
-                第12頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+                第11頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共11頁</span>
             </div>
             <div class="work_title_img_container set_middle">
                 <picture>
